manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework6-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: homework6-app
  template:
    metadata:
      labels:
        app: homework6-app
    spec:
      containers:
        - name: app
          image: udintsev/otus-architect-homework6:0.1
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 5
            periodSeconds: 5
